<resources>
    <string name="app_name">My Weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d°</string>
    <string name="Pressure">Pressure %1$d° hPa</string>
    <string name="sunrise">"sunrise: "</string>
    <string name="sunset">"sunset: "</string>
    <string name="temp">Temp:</string>
    <string name="tempH">High:</string>
    <string name="tempL">Low:</string>
    <string name="zip_code">zip_code</string>
    <string name="submit">submit</string>
</resources>